<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/entry"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/llEnterBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop100" />

    <LinearLayout
        android:id="@+id/llEnterBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnter">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_input_text"
            android:theme="@style/AuthTextInputThemeOverlay"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLogin"
                style="@style/AuthInputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/example_mail"
                android:includeFontPadding="false"
                android:minHeight="0dp"
                android:paddingStart="16dp"
                android:paddingTop="0dp"
                android:paddingEnd="16dp"
                android:paddingBottom="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_input_text"
            android:theme="@style/AuthTextInputThemeOverlay"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/AuthInputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_password"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:minHeight="0dp"
                android:paddingStart="16dp"
                android:paddingTop="0dp"
                android:paddingEnd="16dp"
                android:paddingBottom="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_login"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/entry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@id/llRegisterAndLogin"
        app:layout_constraintTop_toBottomOf="@+id/llEnterBlock" />

    <LinearLayout
        android:id="@+id/llRegisterAndLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_semibold"
                android:text="@string/have_not_acc_question"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_semibold"
                android:text="@string/register"
                android:textColor="@color/green"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/forgot_password"
            android:textColor="@color/green"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke"
        app:layout_constraintBottom_toTopOf="@id/llSocialMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRegisterAndLogin" />

    <LinearLayout
        android:id="@+id/llSocialMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonVK"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_vk"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text=""
            app:backgroundTint="@null"
            app:icon="@drawable/ic_vk_logo"
            app:iconGravity="textStart"
            app:iconSize="26dp"
            app:iconTint="@android:color/white" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOdnoklassniki"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_odnoklassniki"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text=""
            app:backgroundTint="@null"
            app:icon="@drawable/ic_odnoklassniki_logo"
            app:iconGravity="textStart"
            app:iconSize="26dp"
            app:iconTint="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
